<?xml version="1.0" encoding="utf-8"?>

<!--
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 -->
 
<resources>

    <string name="app_name">Asianet Auto Login</string>
    <string name="checking_status">Checking status...</string>
    <string name="enter_cred">Enter login credentials</string>
    <string name="forever">Forever</string>
    <string name="from">From</string>
    <string name="internet_access">Internet access enabled.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
	<string name="login">Login</string>
	<string name="logging_in">Logging in.. Please wait while your credentials are verified.</string>
	<string name="logged_in">Logged in</string>
	<string name="logout">Logout</string>
	<string name="logout_message">This would DISABLE automatic login.\n\nAre you sure you want to log out ?</string>
	<string name="save">Save</string>
	<string name="settings_saved">Settings saved !</string>
	<string name="status">Status</string>
	<string name="stay_signed_in_for">Stay signed in for</string>
	<string name="minutes">Minutes</string>
	<string name="hours">Hours</string>
	<string name="show_persitent_notification">Show persistent notification</string>
	<string name="ssid">WiFi SSID</string>
	<string name="upto">Upto</string>
	<string name="enter_username">Enter Username</string>
	<string name="enter_password">Enter Password</string>

</resources>